--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"易大师的博客",
     "subTitle":"易大师的博客，用于分享一些自己的想法以及项目经验",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/129514746?u=87a03dd3696979cfbe6f19dfa2dfee440465c3cf&v=4&size=64",
     "GMEEK_VERSION":"last"
 }
